--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </ul>
     </nav>
     <div class="home">
-        <img src="images/zoro.gif" alt="zoro" height="450px" width="1518px"> 
+        <img src="images 2.0/zoro.gif" alt="zoro" height="450px" width="1518px"> 
         <div class="banner-text">
         <h4>Anime Artworks</h4>
         <p>Created by a team of artists</p>
