--- a/Japan.html
+++ b/Japan.html
@@ -60,7 +60,7 @@
         <h1>JAPAN</h1>
         <div class="Anime">
             <div class="gallery">
-                <img src="images/Ryomen Sukuna.png" alt="Ryomen Sukuna">
+                <img src="images 2.0/Ryomen Sukuna.png" alt="Ryomen Sukuna">
                     <div class="desc">Ryomen Sukuna from Jujutsu Kaisen</div>
             </div>
             <div class="gallery">
