--- a/Japan.html
+++ b/Japan.html
@@ -64,7 +64,7 @@
                     <div class="desc">Ryomen Sukuna from Jujutsu Kaisen</div>
             </div>
             <div class="gallery">
-                <img src="images/Toya Todoroki.png" alt="Toya Todoroki">
+                <img src="images 2.0/Toya Todoroki.png" alt="Toya Todoroki">
                     <div class="desc">Toya Todoroki"Dabi" from My Hero Academia</div>
             </div>
             <div class="gallery">
