--- a/Japan.html
+++ b/Japan.html
@@ -100,11 +100,11 @@
                     <div class="desc">Kaido from One Piece</div>
             </div>
             <div class="gallery">
-                <img src="images/Zenitsu Agatsuma.jpg" alt="Zenitsu Agatsuma">
+                <img src="images 2.0/Zenitsu Agatsuma.jpg" alt="Zenitsu Agatsuma">
                     <div class="desc">Zenitsu Agatsuma from Demon Slayer</div>
             </div>
             <div class="gallery">
-                <img src="images/Vinsmoke Sanji.png" alt="Vinsmoke Sanji">
+                <img src="images 2.0/Vinsmoke Sanji.png" alt="Vinsmoke Sanji">
                     <div class="desc">Vinsmoke Sanji from One Piece</div>
             </div>   
             <div class="gallery">
