--- a/Japan.html
+++ b/Japan.html
@@ -108,7 +108,7 @@
                     <div class="desc">Vinsmoke Sanji from One Piece</div>
             </div>   
             <div class="gallery">
-                <img src="images/Yū Nishinoya.png" alt="Yū Nishinoya">
+                <img src="images 2.0/Yū Nishinoya.png" alt="Yū Nishinoya">
                     <div class="desc">Yū Nishinoya from Haikyuu!!</div>
             </div> 
             <div class="gallery">
@@ -116,11 +116,11 @@
                     <div class="desc">Monkey D. Luffy(Gear 4 "BounceMan" from One Piece</div>
             </div> 
             <div class="gallery">
-                <img src="images/Nara Shikamaru.png" alt="Nara Shikamaru">
+                <img src="images 2.0/Nara Shikamaru.png" alt="Nara Shikamaru">
                     <div class="desc">Shikamaru Nara from Naruto</div>
             </div> 
             <div class="gallery">
-                <img src="images/Toru Oikawa.png" alt="Toru Oikawa">
+                <img src="images 2.0/Luffy in Gear 4 BounceMan.jpg" alt="Toru Oikawa">
                     <div class="desc">Toru Oikawa from Haikyuu!!</div>
             </div>      
             <div class="gallery">
