--- a/Japan.html
+++ b/Japan.html
@@ -112,7 +112,7 @@
                     <div class="desc">Yū Nishinoya from Haikyuu!!</div>
             </div> 
             <div class="gallery">
-                <img src="images/Luffy in Gear 4 BounceMan.jpg" alt="Luffy in Gear 4 BounceMan">
+                <img src="images 2.0/Luffy in Gear 4 BounceMan.jpg" alt="Luffy in Gear 4 BounceMan">
                     <div class="desc">Monkey D. Luffy(Gear 4 "BounceMan" from One Piece</div>
             </div> 
             <div class="gallery">
@@ -120,7 +120,7 @@
                     <div class="desc">Shikamaru Nara from Naruto</div>
             </div> 
             <div class="gallery">
-                <img src="images 2.0/Luffy in Gear 4 BounceMan.jpg" alt="Toru Oikawa">
+                <img src="images 2.0/Toru Oikawa.png" alt="Toru Oikawa">
                     <div class="desc">Toru Oikawa from Haikyuu!!</div>
             </div>      
             <div class="gallery">
