--- a/Japan.html
+++ b/Japan.html
@@ -124,11 +124,11 @@
                     <div class="desc">Toru Oikawa from Haikyuu!!</div>
             </div>      
             <div class="gallery">
-                <img src="images/Tobio Kageyama.png" alt="Tobio Kageyama">
+                <img src="images 2.0/Tobio Kageyama.png" alt="Tobio Kageyama">
                     <div class="desc">Tobio Kageyama from Haikyuu!!</div>
             </div>
             <div class="gallery">
-                <img src="images/Rimuru.png" alt="Rimuru">
+                <img src="images 2.0/Rimuru.png" alt="Rimuru">
                     <div class="desc">Rimuru Tempest from That Time I Got Reincarnated as a Slime</div>
             </div>
             <div class="gallery">
