--- a/Japan.html
+++ b/Japan.html
@@ -296,39 +296,39 @@
                     <div class="desc">Meruem from Hunter x Hunter</div>
             </div>
             <div class="gallery">
-                <img src="images/Millim Nava.jfif" alt="Millim Nava">
+                <img src="images 2.0/Millim Nava.jfif" alt="Millim Nava">
                     <div class="desc">Millim Nava from That Time I Reincarnated As A Slime</div>
             </div>
             <div class="gallery">
-                <img src="images/Minato.jfif" alt="Minato">
+                <img src="images 2.0/Minato.jfif" alt="Minato">
                     <div class="desc">Minato Namikaze from Naruto</div>
             </div>
             <div class="gallery">
-                <img src="images/Mitsuya.jfif" alt="Mitsuya">
+                <img src="images 2.0/Mitsuya.jfif" alt="Mitsuya">
                     <div class="desc">Takashi Mitsuya from Tokyo Revengers</div>
             </div>
             <div class="gallery">
-                <img src="images/NAMI.jfif" alt="NAMI">
+                <img src="images 2.0/NAMI.jfif" alt="NAMI">
                     <div class="desc">Nami from One Piece</div>
             </div>
             <div class="gallery">
-                <img src="images/Nico Robin.jfif" alt="Nico Robin">
+                <img src="images 2.0/Nico Robin.jfif" alt="Nico Robin">
                     <div class="desc">Nico Robin from One Piece</div>
             </div>
             <div class="gallery">
-                <img src="images/Nobara kugisaki.jfif" alt="Nobara kugisaki">
+                <img src="images 2.0/Nobara kugisaki.jfif" alt="Nobara kugisaki">
                     <div class="desc">Nobara kugisaki from Jujutsu Kaisen</div>
             </div>
             <div class="gallery">
-                <img src="images/Rimuru Tempest.jfif" alt="Rimuru Tempest">
+                <img src="images 2.0/Rimuru Tempest.jfif" alt="Rimuru Tempest">
                     <div class="desc">Rimuru Tempest from That Time I Reincarnated As A Slime</div>
             </div>
             <div class="gallery">
-                <img src="images/Roronoa Zoro.png" alt="Roronoa Zoro">
+                <img src="images 2.0/Roronoa Zoro.png" alt="Roronoa Zoro">
                     <div class="desc">Roronoa Zoro from One Piece</div>
             </div>
             <div class="gallery">
-                <img src="images/Ryunosuke Tanaka.jfif" alt="Ryunosuke Tanaka">
+                <img src="images 2.0/Ryunosuke Tanaka.jfif" alt="Ryunosuke Tanaka">
                     <div class="desc">Ryunosuke Tanaka from Haikyuu!!</div>
             </div>
             <div class="gallery">
