--- a/Japan.html
+++ b/Japan.html
@@ -292,7 +292,7 @@
                     <div class="desc">Megumi fushiguro from Jujutsu Kaisen</div>
             </div>
             <div class="gallery">
-                <img src="images 2.0/Meruem.jfif alt="Meruem">
+                <img src="images 2.0/Meruem.jfif" alt="Meruem">
                     <div class="desc">Meruem from Hunter x Hunter</div>
             </div>
             <div class="gallery">
@@ -332,39 +332,39 @@
                     <div class="desc">Ryunosuke Tanaka from Haikyuu!!</div>
             </div>
             <div class="gallery">
-                <img src="images/Sabito.jfif" alt="Sabito">
+                <img src="images 2.0/Sabito.jfif" alt="Sabito">
                     <div class="desc">Sabito from Demon Slayer</div>
             </div>
             <div class="gallery">
-                <img src="images/shinobu kocho.jfif" alt="shinobu kocho">
+                <img src="images 2.0/shinobu kocho.jfif" alt="shinobu kocho">
                     <div class="desc">Shinobu Kocho from Demon Slayer</div>
             </div>
             <div class="gallery">
-                <img src="images/Shinso Hitoshi.jfif" alt="Shinso Hitoshi">
+                <img src="images 2.0/Shinso Hitoshi.jfif" alt="Shinso Hitoshi">
                     <div class="desc">Shinso Hitoshi from My Hero Academia</div>
             </div>
             <div class="gallery">
-                <img src="images/Shisui uchiha.jfif" alt="Shisui Uchiha">
+                <img src="images 2.0/Shisui uchiha.jfif" alt="Shisui Uchiha">
                     <div class="desc">Shisui Uchiha from Naruto Shippuden</div>
             </div>
             <div class="gallery">
-                <img src="images/shoto todoroki.jfif" alt="Shoto Todoroki">
+                <img src="images 2.0/shoto todoroki.jfif" alt="Shoto Todoroki">
                     <div class="desc">Shoto Todoroki from My Hero Academia</div>
             </div>
             <div class="gallery">
-                <img src="images/shuji hanma.jfif" alt="Shuji Hanma">
+                <img src="images 2.0/shuji hanma.jfif" alt="Shuji Hanma">
                     <div class="desc">Shuji Hanma from Tokyo Revengers</div>
             </div>
             <div class="gallery">
-                <img src="images/Sugawara.jfif" alt="Sugawara">
+                <img src="images 2.0/Sugawara.jfif" alt="Sugawara">
                     <div class="desc">Sugawara from Haikyuu!!</div>
             </div>
             <div class="gallery">
-                <img src="images/Takimechi.jfif" alt="Takimechi">
+                <img src="images 2.0/Takimechi.jfif" alt="Takimechi">
                     <div class="desc">Hanagaki Takimechi from Tokyo Revengers</div>
             </div>
             <div class="gallery">
-                <img src="images/Tamaki Amajiki.jfif" alt="Tamaki Amajiki">
+                <img src="images 2.0/Tamaki Amajiki.jfif" alt="Tamaki Amajiki">
                     <div class="desc">Tamaki Amajiki from My Hero Academia</div>
             </div>
             <div class="gallery">
