--- a/Japan.html
+++ b/Japan.html
@@ -368,47 +368,47 @@
                     <div class="desc">Tamaki Amajiki from My Hero Academia</div>
             </div>
             <div class="gallery">
-                <img src="images/tempest rimuru.jfif" alt="Tempest Rimuru">
+                <img src="images 2.0/tempest rimuru.jfif" alt="Tempest Rimuru">
                     <div class="desc">Tempest Rimuru from That Time I Reincarnated As A Slime</div>
             </div>
             <div class="gallery">
-                <img src="images/tempest.jfif" alt="Tempest Rimuru">
+                <img src="images 2.0/tempest.jfif" alt="Tempest Rimuru">
                     <div class="desc">Tempest Rimuru from That Time I Reincarnated As A Slime</div>
             </div>
             <div class="gallery">
-                <img src="images/tengen izui.jfif" alt="Tengen Izui">
+                <img src="images 2.0/tengen izui.jfif" alt="Tengen Izui">
                     <div class="desc">Tengen Izui from Demon Slayer</div>
             </div>
             <div class="gallery">
-                <img src="images/Tetsuro Kuroo.jfif" alt="Tetsuro Kuroo">
+                <img src="images 2.0/Tetsuro Kuroo.jfif" alt="Tetsuro Kuroo">
                     <div class="desc">Tetsuro Kuroo from Haikyuu!!</div>
             </div>
             <div class="gallery">
-                <img src="images/todoroki,deku,bakugo.jfif" alt="Todoroki,Deku,Bakugo">
+                <img src="images 2.0/todoroki,deku,bakugo.jfif" alt="Todoroki,Deku,Bakugo">
                     <div class="desc">Todoroki,Deku,Bakugo from My Hero Academia</div>
             </div>
             <div class="gallery">
-                <img src="images/toge inumaki.jfif" alt="Toge Inumaki">
+                <img src="images 2.0/toge inumaki.jfif" alt="Toge Inumaki">
                     <div class="desc">Toge Inumaki from Jujutsu Kaisen</div>
             </div>
             <div class="gallery">
-                <img src="images/Toji.jfif" alt="Toji">
+                <img src="images 2.0/Toji.jfif" alt="Toji">
                     <div class="desc">Toji Zenin from Jujutsu Kaisen</div>
             </div>
             <div class="gallery">
-                <img src="images/Tomioka giyuu.jfif" alt="Tomioka Giyuu">
+                <img src="images 2.0/Tomioka giyuu.jfif" alt="Tomioka Giyuu">
                     <div class="desc">Tomioka Giyuu from Demon Slayer</div>
             </div>
             <div class="gallery">
-                <img src="images/Tomura Shigaraki.jpg" alt="Tomura Shigaraki">
+                <img src="images 2.0/Tomura Shigaraki.jpg" alt="Tomura Shigaraki">
                     <div class="desc">Tomura Shigaraki from My Hero Academia</div>
             </div>
             <div class="gallery">
-                <img src="images/Usopp.jfif" alt="Usopp">
+                <img src="images 2.0/Usopp.jfif" alt="Usopp">
                     <div class="desc">Usopp from One Piece</div>
             </div>
             <div class="gallery">
-                <img src="images/veldora.jfif" alt="Veldora">
+                <img src="images 2.0/veldora.jfif" alt="Veldora">
                     <div class="desc">Veldora from That Time I Reincarnated As A Slime</div>
             </div>
         </div>
