--- a/SouthKorea.html
+++ b/SouthKorea.html
@@ -59,55 +59,55 @@
             <h1>South Korea</h1>
             <div class="Anime">
                 <div class="gallery">
-                    <img src="images/Sung Jinwoo.jpg" alt="Sung Jinwoo">
+                    <img src="images 2.0/Sung Jinwoo.jpg" alt="Sung Jinwoo">
                     <div class="desc">Sung Jinwoo From Solo Leveling</div>
                 </div> 
                 <div class="gallery">
-                    <img src="images/vinny hong serious.jfif" alt="Vinny Hong">
+                    <img src="images 2.0/vinny hong serious.jfif" alt="Vinny Hong">
                     <div class="desc">Vinny Hong From Wind Breaker</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/wooin.jfif" alt="Wooin">
+                    <img src="images 2.0/wooin.jfif" alt="Wooin">
                     <div class="desc">Wooin From Eleceed</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/sung jinwoo igris.jfif" alt="Sung Jinwoo">
+                    <img src="images 2.0/sung jinwoo igris.jfif" alt="Sung Jinwoo">
                     <div class="desc">Sung Jinwoo From Solo Leveling</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/yumi lee.jfif" alt="Yumi Lee">
+                    <img src="images 2.0/yumi lee.jfif" alt="Yumi Lee">
                     <div class="desc">Yumi Lee From Wind Breaker</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Sucheon Kang.jfif" alt="Sucheon Kang">
+                    <img src="images 2.0/Sucheon Kang.jfif" alt="Sucheon Kang">
                     <div class="desc">Sucheon Kang From Eleceed</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/sung j.jfif" alt="Sung Jinwoo">
+                    <img src="images 2.0/sung j.jfif" alt="Sung Jinwoo">
                     <div class="desc">Sung Jinwoo From Solo Leveling</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Shelly.jfif" alt="Shelly">
+                    <img src="images 2.0/Shelly.jfif" alt="Shelly">
                     <div class="desc">Shelly From Wind Breaker</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Subin Lee.jfif" alt="Subin Lee">
+                    <img src="images 2.0/Subin Lee.jfif" alt="Subin Lee">
                     <div class="desc">Subin Lee From Eleceed</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/sung jinwoo.jfif" alt="Sung Jinwoo">
+                    <img src="images 2.0/sung jinwoo.jfif" alt="Sung Jinwoo">
                     <div class="desc">Sung Jinwoo From Solo Leveling</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/minu yoon.jfif" alt="Minu Yoon">
+                    <img src="images 2.0/minu yoon.jfif" alt="Minu Yoon">
                     <div class="desc">Minu Yoon From Wind Breaker</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Seo jiwoo.jfif" alt="Seo Jiwoo">
+                    <img src="images 2.0/Seo jiwoo.jfif" alt="Seo Jiwoo">
                     <div class="desc">Seo Jiwoo (The Protagonist) From Eleceed</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/sung and his shadows.jfif" alt="Sung Jinwoo">
+                    <img src="images 2.0/sung and his shadows.jfif" alt="Sung Jinwoo">
                     <div class="desc">Sung Jinwoo & his shadows From Solo Leveling</div>
                 </div>
                 <div class="gallery">
