--- a/SouthKorea.html
+++ b/SouthKorea.html
@@ -115,11 +115,11 @@
                     <div class="desc">Jay Jo From Wind Breaker</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Seo jiwoo.jfif" alt="Seo Jiwoo">
+                    <img src="images 2.0/Seo jiwoo.jfif" alt="Seo Jiwoo">
                     <div class="desc">Seo Jiwoo From Eleceed</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Park Heejin.jfif" alt="Park Heejin">
+                    <img src="images 2.0/Park Heejin.jfif" alt="Park Heejin">
                     <div class="desc">Park Heejin From Solo Leveling</div>
                 </div>
                 <div class="gallery">
@@ -127,7 +127,7 @@
                     <div class="desc">Jay Jo Serious Face From Wind Breaker</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/seo jiwoo fighting.jfif" alt="Seo Jiwoo">
+                    <img src="images 2.0/seo jiwoo fighting.jfif" alt="Seo Jiwoo">
                     <div class="desc">Seo Jiwoo Fighting Pose From Eleceed</div>
                 </div>
                 <div class="gallery">
