--- a/Demon Slayer.html
+++ b/Demon Slayer.html
@@ -69,7 +69,7 @@
                             <div class="desc">The 9 Nine Hashiras from Demon Slayer</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Zenitsu Agatsuma.jpg" alt="Zenitsu Agatsuma">
+                        <img src="images 2.0/Zenitsu Agatsuma.jpg" alt="Zenitsu Agatsuma">
                             <div class="desc">Zenitsu Agatsuma from Demon Slayer</div>
                     </div>
                     <div class="gallery">
@@ -85,19 +85,19 @@
                             <div class="desc">Kanao Tsuyuri from Demon Slayer</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Sabito.jfif" alt="Sabito">
+                        <img src="images 2.0/Sabito.jfif" alt="Sabito">
                             <div class="desc">Sabito from Demon Slayer</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/shinobu kocho.jfif" alt="shinobu kocho">
+                        <img src="images 2.0/shinobu kocho.jfif" alt="shinobu kocho">
                             <div class="desc">Shinobu Kocho from Demon Slayer</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/tengen izui.jfif" alt="Tengen Izui">
+                        <img src="images 2.0/tengen izui.jfif" alt="Tengen Izui">
                             <div class="desc">Tengen Izui from Demon Slayer</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Tomioka giyuu.jfif" alt="Tomioka Giyuu">
+                        <img src="images 2.0/Tomioka giyuu.jfif" alt="Tomioka Giyuu">
                             <div class="desc">Tomioka Giyuu from Demon Slayer</div>
                     </div>
                 </div>    
