--- a/Female Character.html
+++ b/Female Character.html
@@ -72,43 +72,43 @@
                         <div class="desc">Kanao Tsuyuri from Demon Slayer</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Maki Zenin.jfif" alt="Maki Zenin">
+                    <img src="images 2.0/Maki Zenin.jfif" alt="Maki Zenin">
                         <div class="desc">Maki Zenin from Jujutsu Kaisen</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Millim Nava.jfif" alt="Millim Nava">
+                    <img src="images 2.0/Millim Nava.jfif" alt="Millim Nava">
                         <div class="desc">Nava from That Time I Reincarnated as a Slime</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Nobara kugisaki.jfif" alt="Nobara kugisaki">
+                    <img src="images 2.0/Nobara kugisaki.jfif" alt="Nobara kugisaki">
                         <div class="desc">Nobara kugisaki from Jujutsu Kaisen</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/NAMI.jfif" alt="NAMI">
+                    <img src="images 2.0/NAMI.jfif" alt="NAMI">
                         <div class="desc">Nami from One Piece</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Nico Robin.jfif" alt="Nico Robin">
+                    <img src="images 2.0/Nico Robin.jfif" alt="Nico Robin">
                         <div class="desc">Nico Robin from One Piece</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/shinobu kocho.jfif" alt="shinobu kocho">
+                    <img src="images 2.0/shinobu kocho.jfif" alt="shinobu kocho">
                         <div class="desc">Shinobu Kocho from Demon Slayer</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/yumi lee.jfif" alt="Yumi Lee">
+                    <img src="images 2.0/yumi lee.jfif" alt="Yumi Lee">
                     <div class="desc">Yumi Lee from Wind Breaker</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Shelly.jfif" alt="Shelly">
+                    <img src="images 2.0/Shelly.jfif" alt="Shelly">
                     <div class="desc">Shelly from Wind Breaker</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Subin Lee.jfif" alt="Subin Lee">
+                    <img src="images 2.0/Subin Lee.jfif" alt="Subin Lee">
                     <div class="desc">Subin Lee from Solo Leveling</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Park Heejin.jfif" alt="Park Heejin">
+                    <img src="images 2.0/Park Heejin.jfif" alt="Park Heejin">
                     <div class="desc">Park Heejin from Solo Leveling</div>
                 </div>
                 <div class="gallery">
