--- a/Eleceed.html
+++ b/Eleceed.html
@@ -61,23 +61,23 @@
                 <hr width="1517px"> 
                 <div class="Anime">
                     <div class="gallery">
-                        <img src="images/wooin.jfif" alt="Wooin">
+                        <img src="images 2.0/wooin.jfif" alt="Wooin">
                         <div class="desc">Wooin From Eleceed</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Sucheon Kang.jfif" alt="Sucheon Kang">
+                        <img src="images 2.0/Sucheon Kang.jfif" alt="Sucheon Kang">
                         <div class="desc">Sucheon Kang From Eleceed</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Subin Lee.jfif" alt="Subin Lee">
+                        <img src="images 2.0/Subin Lee.jfif" alt="Subin Lee">
                         <div class="desc">Subin Lee From Eleceed</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Seo jiwoo.jfif" alt="Seo Jiwoo">
+                        <img src="images 2.0/Seo jiwoo.jfif" alt="Seo Jiwoo">
                         <div class="desc">Seo Jiwoo From Eleceed</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/seo jiwoo fighting.jfif" alt="Seo Jiwoo">
+                        <img src="images 2.0/seo jiwoo fighting.jfif" alt="Seo Jiwoo">
                         <div class="desc">Seo Jiwoo From Eleceed</div>
                     </div>
                     <div class="gallery">
