--- a/Male Characters.html
+++ b/Male Characters.html
@@ -60,11 +60,11 @@
             <h2>Male Characters</h2>
             <div class="Anime">
                 <div class="gallery">
-                    <img src="images/Ryomen Sukuna.png" alt="Ryomen Sukuna">
+                    <img src="images 2.0/Ryomen Sukuna.png" alt="Ryomen Sukuna">
                         <div class="desc">Ryomen Sukuna from Jujutsu Kaisen</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Toya Todoroki.png" alt="Toya Todoroki">
+                    <img src="images 2.0/Toya Todoroki.png" alt="Toya Todoroki">
                         <div class="desc">Toya Todoroki"Dabi" from My Hero Academia</div>
                 </div>
                 <div class="gallery">
