--- a/Male Characters.html
+++ b/Male Characters.html
@@ -100,35 +100,35 @@
                         <div class="desc">Kaido from One Piece</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Zenitsu Agatsuma.jpg" alt="Zenitsu Agatsuma">
+                    <img src="images 2.0/Zenitsu Agatsuma.jpg" alt="Zenitsu Agatsuma">
                         <div class="desc">Zenitsu Agatsuma from Demon Slayer</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Vinsmoke Sanji.png" alt="Vinsmoke Sanji">
+                    <img src="images 2.0/Vinsmoke Sanji.png" alt="Vinsmoke Sanji">
                         <div class="desc">Vinsmoke Sanji from One Piece</div>
                 </div>   
                 <div class="gallery">
-                    <img src="images/Yū Nishinoya.png" alt="Yū Nishinoya">
+                    <img src="images 2.0/Yū Nishinoya.png" alt="Yū Nishinoya">
                         <div class="desc">Yū Nishinoya from Haikyuu!!</div>
                 </div> 
                 <div class="gallery">
-                    <img src="images/Luffy in Gear 4 BounceMan.jpg" alt="Luffy in Gear 4 BounceMan">
+                    <img src="images 2.0/Luffy in Gear 4 BounceMan.jpg" alt="Luffy in Gear 4 BounceMan">
                         <div class="desc">Monkey D. Luffy(Gear 4 "BounceMan" from One Piece</div>
                 </div> 
                 <div class="gallery">
-                    <img src="images/Nara Shikamaru.png" alt="Nara Shikamaru">
+                    <img src="images 2.0/Nara Shikamaru.png" alt="Nara Shikamaru">
                         <div class="desc">Shikamaru Nara from Naruto</div>
                 </div> 
                 <div class="gallery">
-                    <img src="images/Toru Oikawa.png" alt="Toru Oikawa">
+                    <img src="images 2.0/Toru Oikawa.png" alt="Toru Oikawa">
                         <div class="desc">Toru Oikawa from Haikyuu!!</div>
                 </div>      
                 <div class="gallery">
-                    <img src="images/Tobio Kageyama.png" alt="Tobio Kageyama">
+                    <img src="images 2.0/Tobio Kageyama.png" alt="Tobio Kageyama">
                         <div class="desc">Tobio Kageyama from Haikyuu!!</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Rimuru.png" alt="Rimuru">
+                    <img src="images 2.0/Rimuru.png" alt="Rimuru">
                         <div class="desc">Rimuru Tempest from That Time I Got Reincarnated as a Slime</div>
                 </div>
                 <div class="gallery">
