--- a/Male Characters.html
+++ b/Male Characters.html
@@ -268,27 +268,27 @@
                         <div class="desc">Monkey D. Luffy "Gear 5" from One Piece</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Madara Uchiha.jfif" alt="Madara Uchiha">
+                    <img src="images 2.0/Madara Uchiha.jfif" alt="Madara Uchiha">
                         <div class="desc">Madara Uchiha from Naruto</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Manjiro Mikey Sano.jfif" alt="Manjiro Sano">
+                    <img src="images 2.0/Manjiro Mikey Sano.jfif" alt="Manjiro Sano">
                         <div class="desc">Manjiro "Mikey" Sano from Tokyo Revengers</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Megumi.jfif" alt="Megumi">
+                    <img src="images 2.0/Megumi.jfif" alt="Megumi">
                         <div class="desc">Megumi fushiguro from Jujutsu Kaisen</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Meruem.jfif" alt="Meruem">
+                    <img src="images 2.0/Meruem.jfif" alt="Meruem">
                         <div class="desc">Meruem from Hunter x Hunter</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Minato.jfif" alt="Minato">
+                    <img src="images 2.0/Minato.jfif" alt="Minato">
                         <div class="desc">Minato Namikaze from Naruto</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Mitsuya.jfif" alt="Mitsuya">
+                    <img src="images 2.0/Mitsuya.jfif" alt="Mitsuya">
                         <div class="desc">Takashi Mitsuya from Tokyo Revengers</div>
                 </div>
                 <div class="gallery">
