--- a/Male Characters.html
+++ b/Male Characters.html
@@ -292,39 +292,39 @@
                         <div class="desc">Takashi Mitsuya from Tokyo Revengers</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Rimuru Tempest.jfif" alt="Rimuru Tempest">
+                    <img src="images 2.0/Rimuru Tempest.jfif" alt="Rimuru Tempest">
                         <div class="desc">Rimuru from That Time I Reincarnated as a Slime</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Roronoa Zoro.png" alt="Roronoa Zoro">
+                    <img src="images 2.0/Roronoa Zoro.png" alt="Roronoa Zoro">
                         <div class="desc">Roronoa Zoro from One Piece</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Ryunosuke Tanaka.jfif" alt="Ryunosuke Tanaka">
+                    <img src="images 2.0/Ryunosuke Tanaka.jfif" alt="Ryunosuke Tanaka">
                         <div class="desc">Ryunosuke Tanaka from Haikyuu!!</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Sabito.jfif" alt="Sabito">
+                    <img src="images 2.0/Sabito.jfif" alt="Sabito">
                         <div class="desc">Sabito from Demon Slayer</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Shinso Hitoshi.jfif" alt="Shinso Hitoshi">
+                    <img src="images 2.0/Shinso Hitoshi.jfif" alt="Shinso Hitoshi">
                         <div class="desc">Shinso Hitoshi from My Hero Academia</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Shisui uchiha.jfif" alt="Shisui Uchiha">
+                    <img src="images 2.0/Shisui uchiha.jfif" alt="Shisui Uchiha">
                         <div class="desc">Shisui Uchiha from Naruto Shippuden</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/shoto todoroki.jfif" alt="Shoto Todoroki">
+                    <img src="images 2.0/shoto todoroki.jfif" alt="Shoto Todoroki">
                         <div class="desc">Shoto Todoroki from My Hero Academia</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/shuji hanma.jfif" alt="Shuji Hanma">
+                    <img src="images 2.0/shuji hanma.jfif" alt="Shuji Hanma">
                         <div class="desc">Shuji Hanma from Tokyo Revengers</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Sugawara.jfif" alt="Sugawara">
+                    <img src="images 2.0/Sugawara.jfif" alt="Sugawara">
                         <div class="desc">Sugawara from Haikyuu!!</div>
                 </div>
                 <div class="gallery">
