--- a/Male Characters.html
+++ b/Male Characters.html
@@ -328,35 +328,35 @@
                         <div class="desc">Sugawara from Haikyuu!!</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Takimechi.jfif" alt="Takimechi">
+                    <img src="images 2.0/Takimechi.jfif" alt="Takimechi">
                         <div class="desc">Hanagaki Takimechi from Tokyo Revengers</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Tamaki Amajiki.jfif" alt="Tamaki Amajiki">
+                    <img src="images 2.0/Tamaki Amajiki.jfif" alt="Tamaki Amajiki">
                         <div class="desc">Tamaki Amajiki from My Hero Academia</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/tempest rimuru.jfif" alt="Tempest Rimuru">
+                    <img src="images 2.0/tempest rimuru.jfif" alt="Tempest Rimuru">
                         <div class="desc">Rimuru from That Time I Reincarnated As A Slime</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/tempest.jfif" alt="Tempest Rimuru">
+                    <img src="images 2.0/tempest.jfif" alt="Tempest Rimuru">
                         <div class="desc">Rimuru from That Time I Reincarnated As A Slime</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/tengen izui.jfif" alt="Tengen Izui">
+                    <img src="images 2.0/tengen izui.jfif" alt="Tengen Izui">
                         <div class="desc">Tengen Izui from Demon Slayer</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Tetsuro Kuroo.jfif" alt="Tetsuro Kuroo">
+                    <img src="images 2.0/Tetsuro Kuroo.jfif" alt="Tetsuro Kuroo">
                         <div class="desc">Tetsuro Kuroo from Haikyuu!!</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/todoroki,deku,bakugo.jfif" alt="Todoroki,Deku,Bakugo">
+                    <img src="images 2.0/todoroki,deku,bakugo.jfif" alt="Todoroki,Deku,Bakugo">
                         <div class="desc">Todoroki,Deku,Bakugo from My Hero Academia</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/toge inumaki.jfif" alt="Toge Inumaki">
+                    <img src="images 2.0/toge inumaki.jfif" alt="Toge Inumaki">
                         <div class="desc">Toge Inumaki from Jujutsu Kaisen</div>
                 </div>
                 <div class="gallery">
