--- a/Male Characters.html
+++ b/Male Characters.html
@@ -360,39 +360,39 @@
                         <div class="desc">Toge Inumaki from Jujutsu Kaisen</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Toji.jfif" alt="Toji">
+                    <img src="images 2.0/Toji.jfif" alt="Toji">
                         <div class="desc">Toji Zenin from Jujutsu Kaisen</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Tomioka giyuu.jfif" alt="Tomioka Giyuu">
+                    <img src="images 2.0/Tomioka giyuu.jfif" alt="Tomioka Giyuu">
                         <div class="desc">Tomioka Giyuu from Demon Slayer</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Tomura Shigaraki.jpg" alt="Tomura Shigaraki">
+                    <img src="images 2.0/Tomura Shigaraki.jpg" alt="Tomura Shigaraki">
                         <div class="desc">Tomura Shigaraki from My Hero Academia</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Usopp.jfif" alt="Usopp">
+                    <img src="images 2.0/Usopp.jfif" alt="Usopp">
                         <div class="desc">Usopp from One Piece</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/veldora.jfif" alt="Veldora">
+                    <img src="images 2.0/veldora.jfif" alt="Veldora">
                         <div class="desc">Veldora from That Time I Reincarnated As A Slime</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Sung Jinwoo.jpg" alt="Sung Jinwoo">
+                    <img src="images 2.0/Sung Jinwoo.jpg" alt="Sung Jinwoo">
                     <div class="desc">Sung Jinwoo from Solo Leveling</div>
                 </div> 
                 <div class="gallery">
-                    <img src="images/vinny hong serious.jfif" alt="Vinny Hong">
+                    <img src="images 2.0/vinny hong serious.jfif" alt="Vinny Hong">
                     <div class="desc">Vinny Hong from Wind Breaker</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/wooin.jfif" alt="Wooin">
+                    <img src="images 2.0/wooin.jfif" alt="Wooin">
                     <div class="desc">Wooin from Eleceed</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/sung jinwoo igris.jfif" alt="Sung Jinwoo">
+                    <img src="images 2.0/sung jinwoo igris.jfif" alt="Sung Jinwoo">
                     <div class="desc">Sung Jinwoo from Solo Leveling</div>
                 </div>
                 <div class="gallery">
