--- a/Male Characters.html
+++ b/Male Characters.html
@@ -396,31 +396,31 @@
                     <div class="desc">Sung Jinwoo from Solo Leveling</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Sucheon Kang.jfif" alt="Sucheon Kang">
+                    <img src="images 2.0/Sucheon Kang.jfif" alt="Sucheon Kang">
                     <div class="desc">Sucheon Kang from Eleceed</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/sung j.jfif" alt="Sung Jinwoo">
+                    <img src="images 2.0/sung j.jfif" alt="Sung Jinwoo">
                     <div class="desc">Sung Jinwoo from Solo Leveling</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Subin Lee.jfif" alt="Subin Lee">
+                    <img src="images 2.0/Subin Lee.jfif" alt="Subin Lee">
                     <div class="desc">Subin Lee from Eleceed</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/sung jinwoo.jfif" alt="Sung Jinwoo">
+                    <img src="images 2.0/sung jinwoo.jfif" alt="Sung Jinwoo">
                     <div class="desc">Sung Jinwoo from Solo Leveling</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/minu yoon.jfif" alt="Minu Yoon">
+                    <img src="images 2.0/minu yoon.jfif" alt="Minu Yoon">
                     <div class="desc">Minu Yoon from Wind Breaker</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Seo jiwoo.jfif" alt="Seo Jiwoo">
+                    <img src="images 2.0/Seo jiwoo.jfif" alt="Seo Jiwoo">
                     <div class="desc">Seo Jiwoo The Protagonist from Eleceed</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/sung and his shadows.jfif" alt="Sung Jinwoo">
+                    <img src="images 2.0/sung and his shadows.jfif" alt="Sung Jinwoo">
                     <div class="desc">Sung Jinwoo and his shadows from Solo Leveling</div>
                 </div>
                 <div class="gallery">
@@ -428,7 +428,7 @@
                     <div class="desc">Jay Jo from Wind Breaker</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/Seo jiwoo.jfif" alt="Seo Jiwoo">
+                    <img src="images 2.0/Seo jiwoo.jfif" alt="Seo Jiwoo">
                     <div class="desc">Seo Jiwoo The Protagonist from Eleceed</div>
                 </div>
                 <div class="gallery">
@@ -436,7 +436,7 @@
                     <div class="desc">Jay Jo from Wind Breaker</div>
                 </div>
                 <div class="gallery">
-                    <img src="images/seo jiwoo fighting.jfif" alt="Seo Jiwoo">
+                    <img src="images 2.0/seo jiwoo fighting.jfif" alt="Seo Jiwoo">
                     <div class="desc">Seo Jiwoo Fighting from Eleceed</div>
                 </div>
                 <div class="gallery">
